--- a/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Base.lproj/Main.storyboard
@@ -40,18 +40,38 @@
                                             <rect key="frame" x="0.0" y="34" width="360" height="56"/>
                                         </variation>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="kfg-wY-Mqy">
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="JJu-u6-nLR">
                                         <rect key="frame" x="0.0" y="100" width="560" height="56"/>
-                                        <color key="backgroundColor" red="1" green="0.60126306351946102" blue="0.32473200869997743" alpha="1" colorSpace="calibratedRGB"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                        <state key="normal" title="Back"/>
-                                        <variation key="widthClass=compact" misplaced="YES">
-                                            <rect key="frame" x="0.0" y="100" width="360" height="56"/>
-                                        </variation>
-                                        <connections>
-                                            <action selector="backspace:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qp7-NP-wrR"/>
-                                        </connections>
-                                    </button>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="kfg-wY-Mqy">
+                                                <rect key="frame" x="0.0" y="0.0" width="180" height="56"/>
+                                                <color key="backgroundColor" red="1" green="0.60126306351946102" blue="0.32473200869997743" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <state key="normal" title="Back"/>
+                                                <connections>
+                                                    <action selector="backspace:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qp7-NP-wrR"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g6b-uU-AlM">
+                                                <rect key="frame" x="190" y="0.0" width="180" height="56"/>
+                                                <color key="backgroundColor" red="1" green="0.60126306350000003" blue="0.32473200870000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <state key="normal" title="save"/>
+                                                <connections>
+                                                    <action selector="save" destination="BYZ-38-t0r" eventType="touchUpInside" id="V2U-s6-FHR"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QYU-Nc-870">
+                                                <rect key="frame" x="380" y="0.0" width="180" height="56"/>
+                                                <color key="backgroundColor" red="1" green="0.60126306350000003" blue="0.32473200870000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <state key="normal" title="restore"/>
+                                                <connections>
+                                                    <action selector="restore" destination="BYZ-38-t0r" eventType="touchUpInside" id="hde-TH-kp6"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="HVx-YA-Bhc">
                                         <rect key="frame" x="0.0" y="166" width="560" height="326"/>
                                         <subviews>
